--- a/main.html
+++ b/main.html
@@ -9,7 +9,7 @@
 <body>
 	<!-- the entire body must be written by student -->
 	<img src="./image/profile.jpeg" alt="profile" width="100px">
-	<header>ARUN KUMAR G K</header>
+	<h4>ARUN KUMAR G K</h4>
 	<a href="https://www.linkedin.com/in/arun-kumar-g-k-b0ba02193">linkedin</a>
 
 	<section id="skills">
